<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderActivity">

    <TextView
        android:id="@+id/reminderTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_reminder"
        android:textColor="#000"
        android:layout_marginTop="30dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        android:id="@+id/turnOnBtn"
        android:layout_below="@id/reminderTV"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"/>

    <Button
        android:id="@+id/turnOffBtn"
        android:layout_below="@id/reminderTV"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_off"/>

</RelativeLayout>